--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -1,10 +1,29 @@
 PREDEF:
-  - preface.re
+# はじめに
+  - 00_introduction.re
 
 CHAPS:
-  - article.re
+# 水耕栽培生活の紹介
+  - hydroponic_life.re
+# 装置について
+# 電気代について
+  - device.re
+# 種植えから収穫までの流れ
+# 継続的な収穫について
+  - cultivation.re
+# IoT
+  - iot.re
+# 失敗集
+  - failure.re
+# 参考にしたもの
+  - reference.re
+# 今後の展望
+  - future.re
 
-APPENDIX:
+
+# APPENDIX:
+
 
 POSTDEF:
-  - contributors.re
+# あとがき
+  - 99_postscript.re
