--- a/articles/config.yml
+++ b/articles/config.yml
@@ -486,4 +486,4 @@ techbooster:
   # texdocumentclassでcover_fit_page=trueを付けるのと同じ
   cover_fit_page: true
   # 裏表紙画像指定。画像はimages/から探索される
-  backcoverimage: backcover.jpg
+ # backcoverimage: backcover.jpg
