tbf18に向けた修正

--- a/articles/config.yml
+++ b/articles/config.yml
@@ -73,10 +73,10 @@ date: 2024-11-02
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2024-11-02 技術書典17 初版"]]
+history: [["2024-11-02 技術書典17 初版第1刷"], ["2025-06-01 技術書典18 第2版第1刷"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016 Re:VIEW Developers
-rights: (C) 2024 Mutsumix
+rights: (C) 2025 Mutsumix
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
